# bbp

./: .dockerignore  .env  .env.example  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.web  Makefile  Pipfile  Procfile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.circleci/: confg.yml  config.yml
bbp/: context_processors.py  urls.py  wsgi.py
bbp/leagues/: apps.py
bbp/pages/: apps.py  blocks.py  models.py
bbp/pages/migrations/: 0001_initial.py  0002_auto_20180911_0648.py  0002_auto_20190210_2033.py  0003_auto_20180911_0655.py  0003_auto_20190309_1843.py  0004_auto_20190402_2115.py  0005_auto_20190406_1958.py
bbp/pages/templates/pages/: basic_page.html  bbp_page.html
bbp/players/: apps.py  forms.py  models.py  urls.py  views.py
bbp/players/migrations/: 0001_initial.py
bbp/players/templates/players/: create_player.html
bbp/settings/: base.py  dev.py  gunicorn.py  heroku.py  local.py  prod.py  production.py
bbp/static_src/js/: main.js
bbp/static_src/scss/: _base.scss  _layout.scss  _typography.scss  _utilities.scss  _variables.scss  main.scss
bbp/static_src/scss/components/: _header.scss  _hero-image.scss  _rich-text.scss  _streamfield.scss
bbp/static_src/scss/layout/: _footer.scss  _header.scss  _main.scss
bbp/teams/: apps.py
bbp/templates/: 404.html  base.html  footer.html  header.html  layout.html  navigation.html
bbp/templates/menus/: main_menu.html
bbp/tournaments/: apps.py
bbp/users/: admin.py  apps.py  models.py
bbp/users/migrations/: 0001_initial.py
