[tool.poetry]
name = "bbp"
version = "0.1.0"
description = "Bristol Bike Polo's Wagtail site"
authors = ["Ben Dickinson <bcdickinson@gmail.com>"]

[tool.poetry.dependencies]
dj-database-url = "^0.5.0"
django-redis = "^4.10"
django-storages = "^1.7"
django-webpack-loader = "^0.6.0"
gunicorn = {version = "^19.9",extras = ["gevent"]}
psycopg2 = "^2.8"
python = "~3.7"
scout-apm = "^2.1"
sentry-sdk = "^0.9.5"
wagtail = "~2.5"
wagtailmenus = "^2.13"
whitenoise = "^4.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flake8]
exclude = "*/migrations/*"
ignore = "W504"
max_line_length = "120"

[tool.isort]
include_trailing_comma = "1"
known_django = "django,rest_framework"
known_wagtail = "wagtail"
multi_line_output = "3"
sections = "FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_glob = "*/migrations/*,*/node_modules/*"
use_parentheses = "1"
