[tool.poetry]
name = "bbp"
version = "0.1.0"
description = "Bristol Bike Polo's Wagtail site"
authors = ["Ben Dickinson <bcdickinson@gmail.com>"]

[tool.poetry.dependencies]
dj-database-url = "^0.5.0"
django-redis = "^4.10"
django-storages = "^1.7"
django-webpack-loader = "^0.6.0"
gunicorn = {version = "^19.9",extras = ["gevent"]}
psycopg2 = "^2.8"
python = "~3.7"
scout-apm = "^2.1"
sentry-sdk = "^0.9.5"
wagtail = "~2.5"
wagtailmenus = "^2.13"
whitenoise = "^4.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0",allows-prereleases = true}
flake8 = "^3.7"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | bbp.egg-info
    | node_modules
  )/
)
'''

[tool.isort]
include_trailing_comma = "1"
known_django = "django,rest_framework"
known_wagtail = "wagtail"
line_length = "88"
multi_line_output = "3"
sections = "FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_glob = "*/migrations/*,*/node_modules/*"
use_parentheses = "1"
