[tool.poetry]
name = "bbp"
version = "0.1.0"
description = "Bristol Bike Polo's Wagtail site"
authors = ["Ben Dickinson <bcdickinson@gmail.com>"]

[tool.poetry.dependencies]
dj-database-url = "~0.5.0"
django = "~2.2"
django-redis = "~4.11"
django-storages = {version = "~1.9", extras = ["boto3"]}
django-webpack-loader = "~0.6.0"
gunicorn = {version = "~20.0", extras = ["gevent"]}
psycopg2 = "~2.8"
python = "~3.7"
scout-apm = "~2.10"
sentry-sdk = "~0.14"
wagtail = "~2.8"
wagtailmenus = "~3.0"
whitenoise = "~5"

[tool.poetry.dev-dependencies]
black = {version = "~19", allow-prereleases = true}
flake8 = "~3.7"
isort = "~4.3"
invoke = "~1.4.1"
mypy = "~0.761"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | bbp.egg-info
    | node_modules
  )/
)
'''

[tool.isort]
include_trailing_comma = "1"
known_django = "django,rest_framework"
known_wagtail = "wagtail"
line_length = "88"
multi_line_output = "3"
sections = "FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_glob = "*/migrations/*,*/node_modules/*"
use_parentheses = "1"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"
